<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/act_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="22dp" />


                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="12dp"
                    android:background="@null"
                    app:ico_color="@android:color/white"
                    app:ico_icon="gmd-keyboard-arrow-right"
                    app:ico_size="25dp" />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_bar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/et_phone_number_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:hint="@string/phone_number"
            android:inputType="phone"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/layout_phone"
        android:layout_alignLeft="@+id/layout_phone"
        android:layout_alignRight="@+id/layout_phone"
        android:layout_alignStart="@+id/layout_phone"
        android:layout_below="@id/layout_phone"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_password"
            android:drawablePadding="4dp"
            android:drawableRight="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_introducer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_reagent_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:hint="@string/reagent_code"
            android:inputType="text" />


    </android.support.design.widget.TextInputLayout>

    <com.rey.material.widget.CheckBox
        android:id="@+id/chk_show_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/layout_password"
        android:layout_alignRight="@+id/layout_password"
        android:layout_below="@+id/layout_password"
        app:v_styleId="@array/checkbox"/>

    <TextView
        android:id="@+id/txt_show_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chk_show_password_login"
        android:layout_alignTop="@+id/chk_show_password_login"
        android:layout_toLeftOf="@+id/chk_show_password_login"
        android:layout_toStartOf="@+id/chk_show_password_login"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/show_password"
        />

    <com.rey.material.widget.Button
        android:id="@+id/btn_register_login"
        style="@style/LightRaiseWaveColorButtonRippleStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/layout_password"
        android:layout_alignLeft="@+id/layout_password"
        android:layout_alignRight="@+id/layout_password"
        android:layout_alignStart="@+id/layout_password"
        android:layout_below="@+id/chk_show_password_login"
        android:layout_marginTop="27dp"
        android:background="@drawable/bg_button"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        app:rd_bottomPadding="2dp"
        app:rd_delayClick="afterRelease"
        app:rd_enable="true"
        app:rd_leftPadding="1dp"
        app:rd_rightPadding="1dp"
        app:rd_rippleColor="#33000000"
        app:rd_topPadding="1dp"/>


    <TextView
        android:id="@+id/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/forgot_my_pass"/>

</RelativeLayout>
