<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tnt.ibazaar.Act_Message_Support">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center|right"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="12dp"
                    android:background="@null"
                    app:ico_color="@android:color/white"
                    app:ico_icon="gmd-keyboard-arrow-right"
                    app:ico_size="25dp" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center|right"
        android:text="@string/support_message"/>

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_support"
        android:gravity="top|right"
        android:hint="@string/enter_problem_details"
        android:minLines="5"
        android:padding="8dp"/>


    <com.rey.material.widget.Button
        android:id="@+id/btn_send_support_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:padding="8dp"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        app:rd_bottomPadding="2dp"
        app:rd_delayClick="afterRelease"
        app:rd_enable="true"
        app:rd_leftPadding="1dp"
        app:rd_rightPadding="1dp"
        app:rd_rippleColor="#33000000"
        app:rd_topPadding="1dp"/>

</LinearLayout>
