<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Act_Edit_Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_toolbar_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="22dp" />


                    <ImageView
                        android:id="@+id/img_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="12dp"
                        android:background="@null"
                        app:ico_color="@android:color/white"
                        app:ico_icon="gmd-keyboard-arrow-right"
                        app:ico_size="25dp" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/layout_photo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/app_bar"
            android:background="@color/primary">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/contactoutline"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="1dp"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/layout_photo"
            android:layout_marginTop="10dp"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:hint="@string/name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/layout_name"
            android:layout_marginTop="10dp"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:hint="@string/family"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_reagent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/layout_family"
            android:layout_marginTop="10dp"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_reagent_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:hint="@string/reagent_code"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_reagent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/birthdate"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/txt_birthdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/enter_birthday"
                android:textColor="@color/black"
                android:textSize="18dp"/>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email_edit"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_birthdate"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorSecondaryText"/>
        </android.support.design.widget.TextInputLayout>

        <com.rey.material.widget.Button
            android:id="@+id/btn_save_edit"
            style="@style/LightRaiseWaveColorButtonRippleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_email_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/submit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            app:rd_bottomPadding="2dp"
            app:rd_cornerRadius="4dp"
            app:rd_delayClick="afterRelease"
            app:rd_enable="true"
            app:rd_leftPadding="1dp"
            app:rd_rightPadding="1dp"
            app:rd_rippleColor="#33000000"
            app:rd_topPadding="1dp"/>

    </RelativeLayout>
</ScrollView>